# numerical-cdo-copula-paper

./: .gitignore  README.md  pyproject.toml  run_all_multistage.py
cdo_copula/: bump_basis.py  calibration.py  cdo.py  charts.py  cli.py  copula.py  copula_cheb.py  distributions.py  focused_grid.py  hazard_rates.py  interest_rates.py  mathutils.py  reporting.py  steffen.py
data/: cdx_ig_2004_08_04.yaml  cdx_ig_2005_08_30.yaml
